fix: style select text and spacing near search icon feat: use better quality book cover URL chore: add .env.local for local requests

--- a/book-library/src/components/Search/search.module.css
+++ b/book-library/src/components/Search/search.module.css
@@ -19,6 +19,7 @@
   outline: none;
   cursor: pointer;
   padding-right: 10px;
+  color: rgb(255, 255, 255);
 }
 
 .select option {
@@ -27,7 +28,7 @@
 
 .search {
   display: flex;
-  gap: 3px;
+  gap: 7px;
   background-color: rgba(249, 249, 249, 0.892);
   min-width: 100px;
   max-width: 400px;
